# ai-detections

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
default/: app.conf  collections.conf  eventtypes.conf  macros.conf  savedsearches.conf  tags.conf  transforms.conf
deploy/: build.sh
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DETECTION_TEMPLATE.md  TUNING_GUIDE.md  dashboard.html
docs/runbooks/: AI-001-002-003.md  AI-004.md  AI-005.md  AI-006.md  AI-007.md  AI-008.md  AI-009.md  AI-010.md  AI-011.md  AI-012.md  AI-013.md  AI-014.md  AI-015.md  AI-016.md  AI-017.md  AI-018.md  AI-019.md  AI-020.md  AI-021.md  AI-022.md  AI-023.md  AI-024.md  AI-025.md  AI-026.md  AI-027.md  AI-028.md  AI-030.md  AI-031.md  AI-032.md  AI-033.md  AI-034.md  AI-035.md  AI-036.md  AI-037.md  AI-038.md  AI-039.md  AI-040.md  AI-041.md  AI-042.md  AI-043.md  (+10 more)
lookups/: ai_detection_config.csv  ai_mitre_mapping.csv  ai_provider_domains.csv  ai_tool_processes.csv
p2r/: .gitlab-ci.yml  README.md  deploy.py  package-schema.yml  requirements.txt  validate.py
p2r/reports/: p2r_savedsearch_conformance.json  p2r_savedsearch_conformance.md
p2r/tools/: apply_audit_fixes.py  audit_savedsearch_conformance.sh  check_repo_bones.py
saved_searches/: README.md  extract_risk_params.py  package_tags.csv  to_hec.py
saved_searches/tools/: collect_tags.py  (+4 more)
tests/: conftest.py  test_csv_schema.py  test_detection_metadata.py  test_mitre_coverage.py  test_runbook_coverage.py  test_sample_events.py  test_spl_syntax.py
(+15 files in other folders)
